@@ -229,6 +229,8 @@ OTHER CHANGES:
 58. Added campaign option to allow agents to pause the Manual Dial Auto Next 
 	feature
 
+59. Added ability to display inbound email messages in Script tab scripts.
+
 
 
 
